# book-metadata-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  scraper.toml.example
book_metadata_scraper/: cli.py  config.py  fetcher.py  matching.py  models.py  normalise.py  orchestrator.py
book_metadata_scraper/db/: repository.py  schema.py
book_metadata_scraper/sources/: __init__.py  base.py  registry.py
book_metadata_scraper/sources/scoped/: aethon.py  lnrelease.py  mountaindale.py  podium.py  shadow_alley.py
book_metadata_scraper/sources/universal/: amazon_uk.py  google_books.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  DEVELOPMENT_LOG.md  IMPLEMENTATION_NOTES.md  KNOWN_ISSUES.md  PROJECT.md  book-metadata-scraper-design.md
